--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "husky": "^7.0.4",
     "i18next": "^21.6.16",
     "i18next-browser-languagedetector": "^6.1.4",
