--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-i18next": "^11.16.7",
-    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "sass": "^1.50.1",
+    "swiper": "^8.4.2",
     "web-vitals": "^2.1.0"
   },
   "lint-staged": {
