--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-i18next": "^11.16.7",
+    "react-in-viewport": "^1.0.0-alpha.28",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "sass": "^1.50.1",
