--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.0.0",
     "react-i18next": "^11.16.7",
     "react-in-viewport": "^1.0.0-alpha.28",
+    "react-loading-skeleton": "^3.1.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "sass": "^1.50.1",
