--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-in-viewport": "^1.0.0-alpha.28",
     "react-loading-skeleton": "^3.1.0",
     "react-router-dom": "^6.4.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "sass": "^1.50.1",
     "swiper": "^8.4.2",
     "web-vitals": "^2.1.0"
