--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "i18next": "^21.6.16",
     "i18next-browser-languagedetector": "^6.1.4",
     "lint-staged": "^12.4.0",
+    "node-sass": "^7.0.3",
     "prettier": "^2.6.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
